--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,12 @@
+*,
+::before,
+::after {
+    box-sizing: border-box;
+}
+
 body {
+    display: block;
+    box-sizing: border-box;
     background-color: #FFFFFF;
     color: #434455;
     font-family: Roboto, Raleway;
@@ -7,6 +15,18 @@ body {
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.32px;
+}
+
+header {
+    display: block;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
 }
 
 ul {
@@ -90,57 +110,57 @@ nav {
     background-color: white;
 }
 
-.logo {
-    color: var(--IRIS, #4D5AE5);
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 21px;
-    /* 116.667% */
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-}
+color: var(--IRIS, #4D5AE5);
+font-family: Raleway;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 21px;
 
+/* 116.667% */
+
+letter-spacing: 0.54px;
+text-transform: uppercase;
+
+/*padding-left: 156px;
+    padding-right: 76px;*/
+
+
+}
 .logoSpan {
     color: #2E2F42;
 }
-
 .adressLine {
     font-weight: 400;
 }
-
 .section-1 {
     background-color: #2E2F42;
 }
-
 #orderButton {
     border-radius: 4px;
     background: var(--IRIS, #4D5AE5);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: var(--WHITE, #FFF);
     /* Button Text */
+    
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
     /* 150% */
+    
     letter-spacing: 0.64px;
 }
-
 #orderButton:hover {
     background-color: #404BBF;
 }
-
 .section-3 {
     background-color: #F4F4FD;
 }
-
 .page-footer {
     background-color: #2E2F42;
 }
-
 .logoSpan-2 {
     color: var(--CLOUD, #F4F4FD);
     font-family: Raleway;
@@ -149,10 +169,10 @@ nav {
     font-weight: 700;
     line-height: 21px;
     /* 116.667% */
+    
     letter-spacing: 0.54px;
     text-transform: uppercase;
 }
-
 .bottom-text {
     color: var(--CLOUD, #F4F4FD)
 }
