--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 body {
+    margin: 0;
+    display: block;
+    box-sizing: border-box;
     background-color: #FFFFFF;
     color: #434455;
     font-family: Roboto, Raleway;
@@ -10,10 +13,18 @@ body {
 }
 
 ul {
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
+li {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 h1 {
+    margin: 0;
     color: var(--WHITE, #FFF);
     text-align: center;
     /* Header 1 */
@@ -27,6 +38,8 @@ h1 {
 }
 
 h2 {
+    margin-top: 0px;
+    margin-bottom: 0px;
     color: #2E2F42;
     /* Header 2 */
     font-size: 36px;
@@ -38,6 +51,8 @@ h2 {
 }
 
 h3 {
+    margin-top: 0px;
+    margin-bottom: 0px;
     color: #2E2F42;
     /* Header 3 */
     font-size: 20px;
@@ -48,6 +63,8 @@ h3 {
 }
 
 p {
+    margin-top: 0px;
+    margin-bottom: 0px;
     color: #434455;
 }
 
@@ -67,7 +84,7 @@ a {
     color: #2E2F42;
     /* Link Text */
     font-family: Roboto;
-    font-size: 12px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 16px;
@@ -86,8 +103,39 @@ a:focus {
     color: #404BBF;
 }
 
+img {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 nav {
     background-color: white;
+}
+
+.main-nav {
+    display: flex;
+    /*gap: 250px;*/
+    /*margin-right: 156px;
+    /*margin-left: 156px;*/
+}
+
+.page-header {
+    box-sizing: border-box;
+    align-items: center;
+    display: flex;
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.page-nav {
+    margin-left: 156px;
+    margin-right: 325px;
+    display: flex;
+    gap: 40px;
+}
+
+.page-contacts {
+    display: flex;
+    gap: 48px;
 }
 
 .logo {
@@ -104,6 +152,7 @@ nav {
 
 .logoSpan {
     color: #2E2F42;
+    padding-right: 76px;
 }
 
 .adressLine {
@@ -112,9 +161,29 @@ nav {
 
 .section-1 {
     background-color: #2E2F42;
+    margin-top: 0;
+    height: 600px;
+    padding-top: 188px;
 }
 
-#orderButton {
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.banner {
+    box-sizing: border-box;
+    align-items: center;
+}
+
+.main-header {
+    margin-bottom: 40px;
+}
+
+.orderButton {
+    display: block;
+    margin: 0 auto;
     border-radius: 4px;
     background: var(--IRIS, #4D5AE5);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -133,12 +202,116 @@ nav {
     background-color: #404BBF;
 }
 
+.section-content {
+    display: block;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    padding-left: 156px;
+    padding-right: 156px;
+}
+
+.section-2-list {
+    display: flex;
+    gap: 24px;
+}
+
+.section-2-card-header {
+    margin-bottom: 8px;
+}
+
 .section-3 {
     background-color: #F4F4FD;
 }
 
+.section-3-content {
+    display: block;
+    box-sizing: border-box;
+    align-items: center;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    padding-right: 156px;
+    padding-left: 156px;
+}
+
+.section-3-header {
+    margin-left: 483px;
+    margin-right: 456px;
+    margin-bottom: 72px;
+}
+
+.section-3-list {
+    display: flex;
+    gap: 24px;
+}
+
+.section-3-list-card {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    text-align: center;
+    background-color: #FFFFFF;
+}
+
+.section-3card-content {
+    padding-bottom: 32px;
+}
+
+.section-4-container {
+    display: block;
+    text-align: center;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.section-4-header {
+    margin-right: 611px;
+    margin-left: 611px;
+    margin-bottom: 72px;
+}
+
+.section-4-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
+.section-4-list-card {
+    display: block;
+    width: calc((100%-48px)/3);
+    border: 1px solid #E7E9FC;
+}
+
+.section-4-card-content {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 16px;
+}
+
 .page-footer {
     background-color: #2E2F42;
+    width: 1440px;
+    height: 312px;
+    padding-top: 140px;
+    padding-bottom: 100px;
+    padding-left: 156px;
+}
+
+.footer-container {
+    display: block;
+}
+
+.footer-content {
+    display: block;
+}
+
+.footer-logo {
+    padding-bottom: 17px;
+}
+
+.footer-decription {
+    max-width: 264px;
+    text-align: left;
 }
 
 .logoSpan-2 {
