--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,11 @@ p {
 
 button {
     color: #2E2F42;
+    height: 55px;
+    width: 169px;
+    /*border-radius: 4px;*/
     /* Button Text */
+    border: none;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -84,6 +88,7 @@ button {
     line-height: 24px;
     /* 150% */
     letter-spacing: 0.64px;
+    text-align: center;
 }
 
 a {
@@ -120,12 +125,10 @@ nav {
 
 .main-nav {
     display: flex;
-    /*gap: 250px;*/
-    /*margin-right: 156px;
-    /*margin-left: 156px;*/
 }
 
 .page-header {
+    height: 68px;
     box-sizing: border-box;
     align-items: center;
     display: flex;
@@ -156,6 +159,39 @@ nav {
     text-transform: uppercase;
 }
 
+.nav-link {
+    display: block;
+    color: #2E2F42;
+    padding-bottom: 16px;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transform: scaleX(0);
+    /* hide by default */
+    transform-origin: center;
+    transition: transform 0.3s ease;
+}
+
+.nav-link:hover {
+    color: #404bbf;
+}
+
+.nav-link:hover::after,
+.nav-link:focus::after {
+    transform: scaleX(1);
+    /* show on hover/focus */
+}
+
 .logoSpan {
     color: #2E2F42;
     padding-right: 76px;
@@ -170,6 +206,10 @@ nav {
     margin-top: 0;
     height: 600px;
     padding-top: 188px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url("/images/7c8d46d47e83b6c8ee4603ea892aa8aaebb3c5fe.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
 }
 
 .container {
@@ -202,6 +242,7 @@ nav {
     line-height: 24px;
     /* 150% */
     letter-spacing: 0.64px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 #orderButton:hover {
@@ -219,6 +260,23 @@ nav {
 .section-2-list {
     display: flex;
     gap: 24px;
+}
+
+.section-2-icon-container {
+    width: 264px;
+    height: 112px;
+    padding: 24px 100px;
+    margin-bottom: 8px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+    background: var(--CLOUD, #F4F4FD);
+}
+
+.icon {
+    width: 64px;
+    height: 64px;
+    flex-shrink: 0;
 }
 
 .section-2-card-header {
@@ -256,10 +314,39 @@ nav {
     gap: 32px;
     text-align: center;
     background-color: #FFFFFF;
+    box-shadow: none;
+    transition-property: box-shadow;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+
+.section-3-list-card:hover {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 
 .section-3card-content {
     padding-bottom: 32px;
+}
+
+.social-meida-hub {
+    display: flex;
+    gap: 24px;
+    margin-top: 8px;
+    margin-left: 16px;
+}
+
+.social-media-icon-container {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 12px;
+    background-color: #4D5AE5;
+}
+
+.social-media-icon {
+    width: 16px;
+    height: 16px;
+    fill: #4D5AE5;
 }
 
 .section-4-container {
@@ -288,6 +375,28 @@ nav {
     border: 1px solid #E7E9FC;
 }
 
+.section-4-card-image {
+    width: 360px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+}
+
+.section-4-card-image-overflow {
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translatey(-100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.section-4-card-image:hover .section-4-card-image-overflow {
+    transform: translatey(0);
+}
+
 .section-4-card-content {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -304,10 +413,11 @@ nav {
 }
 
 .footer-container {
-    display: block;
+    display: flex;
+    gap: 120px;
 }
 
-.footer-content {
+.footer-content-left {
     display: block;
 }
 
@@ -334,4 +444,45 @@ nav {
 
 .bottom-text {
     color: var(--CLOUD, #F4F4FD)
+}
+
+.socail-media-header {
+    margin-bottom: 16px;
+}
+
+.socail-media-header-content {
+    color: #FFFFFF;
+    /* Body Medium */
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 150% */
+    letter-spacing: 0.32px;
+}
+
+.social-meida-hub-footer {
+    display: flex;
+    gap: 16px;
+}
+
+.social-media-icon-container-footer {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 8px;
+    background-color: #4D5AE5;
+    transition-property: transform;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+
+.social-media-icon-container-footer:hover {
+    transform: scale(1.5);
+}
+
+.social-media-icon-footer {
+    width: 24px;
+    height: 24px;
 }
